<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/btn_add_new_timer"
        android:text="@string/add_new_timer"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:layout_width="138dp"
        android:layout_height="49dp"
        android:background="@drawable/buttonshape"
        android:layout_gravity="center"
        />

    <Button
        android:layout_marginTop="2dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/btn_show_modify_timer"
        android:text="@string/show_modify_timer"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:layout_width="138dp"
        android:layout_height="49dp"
        android:background="@drawable/buttonshape"
        android:layout_gravity="center"
        />

    <Button
        android:layout_marginTop="2dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/btn_snooze_five"
        android:text="@string/Snooze_5_Minutes"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:layout_width="138dp"
        android:layout_height="49dp"
        android:background="@drawable/buttonshape"
        android:layout_gravity="center"
        />

    <Button
        android:layout_marginTop="2dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/btn_snooze_ten"
        android:text="@string/Snooze_10_Minutes"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:layout_width="138dp"
        android:layout_height="49dp"
        android:background="@drawable/buttonshape"
        android:layout_gravity="center"
        />

    <Button
        android:layout_marginTop="2dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/btn_snooze_thirty"
        android:text="@string/Snooze_30_Minutes"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:layout_width="138dp"
        android:layout_height="49dp"
        android:background="@drawable/buttonshape"
        android:layout_gravity="center"
        />

    <Button
        android:layout_marginTop="2dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/btn_snooze_sixty"
        android:text="@string/Snooze_1_Hour"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:layout_width="138dp"
        android:layout_height="49dp"
        android:background="@drawable/buttonshape"
        android:layout_gravity="center"
        />
    <Button
        android:layout_marginTop="2dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/btn_snooze_cancel"
        android:text="@string/delay_cancel"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:layout_width="138dp"
        android:layout_height="49dp"
        android:background="@drawable/buttonshape"
        android:layout_gravity="center"
        android:visibility="invisible"
        />
</LinearLayout>
