<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jiee.smartplug.R6_Record_IR">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:layout_below="@+id/top_toolbar"
        android:background="@drawable/round_corners"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_margin="16dp"
            android:id="@+id/txt_ir_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_recordIr"/>

        <ProgressBar
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:id="@+id/pbProgress"
            style="@style/Base.Widget.AppCompat.Spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_toRightOf="@+id/btn_refresh_list"
            android:layout_toEndOf="@+id/btn_refresh_list">
        </ProgressBar>


        <Button
            android:id="@+id/btn_recordAgain"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_recordAgain"
            android:background="@drawable/buttonshape" />

        <Button
            android:id="@+id/btn_testCommand"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_testCommand"
            android:background="@drawable/buttonshape" />

        <Button
            android:id="@+id/btn_addnew"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_addNow"
            android:background="@drawable/buttonshape" />

        <Button
            android:id="@+id/btn_cancelir"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelir"
            android:onClick="cancelIRRecordCommand"
            android:visibility="gone"
            android:background="@drawable/buttonshape" />

    </LinearLayout>

</RelativeLayout>
