<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4sp"
        android:layout_marginRight="16dp"
        android:background="@color/white"
        android:layout_marginLeft="16dp"
        android:text="@string/msg_enterOldPassword"
        android:layout_marginTop="16sp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/txt_oldPassword"
        android:textColor="@color/black"
        android:background="@drawable/edit_text_design"
        android:singleLine="true"
        android:password="true"
        android:inputType="textPassword"
        android:paddingLeft="10sp"
        android:paddingTop="8sp"
        android:paddingRight="8sp"
        android:paddingBottom="8sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4sp"
        android:layout_marginRight="16dp"
        android:background="@color/white"
        android:layout_marginLeft="16dp"
        android:text="@string/msg_enterNewPassword"
        android:layout_marginTop="16sp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/txt_newPassword"
        android:textColor="@color/black"
        android:background="@drawable/edit_text_design"
        android:singleLine="true"
        android:password="true"
        android:inputType="textPassword"
        android:paddingLeft="10sp"
        android:paddingTop="8sp"
        android:paddingRight="8sp"
        android:paddingBottom="8sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4sp"
        android:layout_marginRight="16dp"
        android:background="@color/white"
        android:layout_marginLeft="16dp"
        android:text="@string/msg_confirmPassword"
        android:layout_marginTop="16sp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@color/black"
        android:id="@+id/txt_confirmPassword"
        android:background="@drawable/edit_text_design"
        android:singleLine="true"
        android:password="true"
        android:inputType="textPassword"
        android:paddingLeft="10sp"
        android:paddingTop="8sp"
        android:paddingRight="8sp"
        android:paddingBottom="8sp" />

</LinearLayout>